--- a/07 - Array Cardio Day 2/index-START - Copy.html
+++ b/07 - Array Cardio Day 2/index-START - Copy.html
@@ -28,8 +28,10 @@
     // Array.prototype.some() // is at least one person 19 or older?
     
     let isAdult = people.some(function (person) {
-      return people.year >= 2020 - year;
+      return (people.year >= 2020 - people.year) >= 19;
     });
+
+    console.log(isAdult);
 
     
 
